--- a/src/components/cartOverlayItem/CartOverlayItem.css
+++ b/src/components/cartOverlayItem/CartOverlayItem.css
@@ -1,7 +1,7 @@
 .CartOverlayItem {
   box-sizing: border-box;
   width: 100%;
-  height: 137px;
+  min-height: 137px;
   padding: 0;
   position: relative;
   margin-top: 35px;
@@ -16,6 +16,8 @@ p {
   height: 137px;
   position: absolute;
   right: 0;
+  top: calc(50% - 137px / 2);
+
   object-fit: contain;
 }
 
@@ -78,15 +80,51 @@ p {
   font-weight: 500;
 }
 
+p.cart-overlay-attribute {
+  height: 23px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
 .cart-overlay-size {
   min-width: 24px;
   min-height: 24px;
   border: 1px solid #1D1F22;
   box-sizing: border-box;
   display: flex;
+  padding: 0px 2px 0px 2px;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
+  margin-left: 8px;
+}
+
+.cart-overlay-sizes-top {
+  display: flex;
+  flex-direction: row;
+}
+
+.size-top:not(:first-of-type){
+  margin-left: 10px;
+}
+
+.cart-overlay-size:not(:first-of-type) {
+  margin-left: 8px;
+}
+
+.touchID {
+  margin-top: 10px;
+}
+
+.touchID .cart-overlay-size {
+  margin-left: 25px; 
+}
+
+.cart-overlay-sizes-main .cart-overlay-size {
+  margin-left: 0px;
+}
+
+.usb {
+  margin-top: 10px;
 }
 
 
@@ -105,11 +143,30 @@ p {
 }
 
 .cart-overlay-sizes {
-  position: absolute;
-  bottom:0;
-  left: 0;
   display: flex;
-  flex-direction: row
+  flex-direction: column;
+  margin-top: 100px;
+}
+
+.cart-overlay-sizes-main {
+  margin-top: 13px;
+  display: flex;
+  flex-direction: row;
+}
+
+.attributes-top{
+  display: flex;
+  flex-direction: row;
+}
+
+.class-overlay-sizes-attributes {
+  display: flex;
+  flex-direction: row;
+}
+
+.cart-overlay-left {
+  display: flex;
+  flex-direction: column;
 }
 
 .cart-overlay-amount {
