--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,10 +1,12 @@
 .Header {
   position: absolute;
-  width: 1440px;
+  width: 100%;
   height: 80px;
   left: 0px;
   top: 0px;
+  right: 0px;
   font-family: "Raleway", sans-serif;
+  z-index: 30;
 }
 
 .navigation {
@@ -34,12 +36,11 @@
 
 .selected {
   border-bottom: 2px solid #5ECE7B;
-  
 }
 
-.selected p {
-  color: #5ECE7B !important;
-  font-weight: 600 !important;
+.header-element-short.selected p {
+  color: #5ECE7B;
+  font-weight: 600;
 }
 
 .header-element p {
@@ -67,9 +68,11 @@
   box-sizing: border-box;
 }
 
-.header-element-short:not(:first-of-type) {
+.header-element-short:nth-of-type(2) {
   margin-left: 18px;
 }
+
+
 
 .header-element-short p {
   margin-top: 5px;
@@ -91,7 +94,6 @@
   justify-content: flex-end;
   align-items: center;
   padding: 0px;
-
   position: absolute;
   width: 204px;
   height: 40px;
@@ -125,8 +127,9 @@
 }
 
 .logo {
+  cursor: pointer;
   position: absolute;
-  left: 699px;
+  left: calc(50% - 16px);
   top: calc(50% - 41px/2 + 4.5px);
 }
 
@@ -135,9 +138,9 @@
   position: absolute;
   width: 325px;
   height: 540px;
-  left: 1028px;
-  top: 78px;
-  z-index: 22;
+  right: -10px;
+  top: 55px;
+  z-index: 30;
   background-color: #FFFF;
   padding: 13px;
   display: flex;
@@ -235,15 +238,16 @@
   position: absolute;
   width: 114px;
   height: 210px;
-  left: 1248px;
-  top: 65px;
+  right: 0px;
+  top: 40px;
   box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+  background: #FFFF;
   padding: 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
-  z-index: 21;
+  z-index: 29;
 }
 
 .currency-dropdown p {
