--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -6,6 +6,7 @@
   margin-right: 20px;
   box-sizing: border-box;
   cursor: pointer;
+  position:relative;
 }
 
 .ProductCard:hover {
@@ -15,6 +16,7 @@
 
 .product-img-wrapper {
   position: relative;
+  z-index: 1;
 }
 
 .out-of-stock {
@@ -42,8 +44,8 @@
   border-radius: 50%;
   width: 52px;
   height: 52px;
-  right: 15px;
-  bottom: -26px;
+  right: 30px;
+  bottom: 70px;
   filter: drop-shadow(0px 4px 11px rgba(29, 31, 34, 0.1));
   display: flex;
   justify-content: center;
@@ -51,6 +53,7 @@
   cursor: pointer;
   transition: all 300ms ease-in-out;
   opacity: 0;
+  z-index: 20;
 }
 
 .ProductCard:hover .product-circle {
@@ -79,7 +82,9 @@ opacity: inherit;
   font-size: 18px;
   line-height: 160%;
   margin-block-end: 0px;
+  margin-top: 15px;
   opacity: inherit;
+  color: #1D1F22;
 }
 
 .product-price {
@@ -89,4 +94,5 @@ opacity: inherit;
   margin-block-start: 0px;
   margin-block-end: 0px;
   opacity: inherit;
+  color: #1D1F22;
 }
