--- a/src/pages/category/Category.css
+++ b/src/pages/category/Category.css
@@ -1,14 +1,14 @@
 .Category {
   position: relative;
-  width: 1440px;
-  height: 1513px;
+  width: 100%;
+  height: 100%;
   font-family: "Raleway", sans-serif;
 }
 
 .category-wrapper {
   position: absolute;
   top: 80px;
-  width: 1440px;
+  width: 100%;
   padding: 100px;
   box-sizing: border-box;
 }
@@ -27,30 +27,20 @@
   margin-top: 100px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
+
+
+
 .overlay {
   position: absolute;
-  width: 1440px;
+  width: 100%;
   top: 0;
   left: 0;
   height: 100%;
   background-color: rgba(57, 55, 72, 0.22);
   z-index: 10;
   opacity: 1;
-  transition: all 400ms ease-in-out;
-}
-
-.overlay2 {
-  position: absolute;
-  width: 1440px;
-  top: 0;
-  left: 0;
-  height: 100%;
-  background-color: rgba(57, 55, 72, 0.22);
-  z-index: 10;
-  opacity: 1;
-  
 }
