--- a/src/pages/productDescription/ProductDescription.css
+++ b/src/pages/productDescription/ProductDescription.css
@@ -1,36 +1,32 @@
 .ProductDescription {
   position: relative;
-  width: 1440px;
-  height: 745px;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
   font-family: "Raleway", sans-serif;
-  box-sizing: border-box;
 }
 
 .product-description-body {
+  margin: 80px auto;
   box-sizing: border-box;
-  position: absolute;
-  top: 80px;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  height: 100%;
   padding: 100px;
 }
 
 .product-images-list {
   direction: rtl;
-  overflow:auto;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  width: 82px;
+  width: 90px;
   max-height: 513px;
-  overflow-x: hidden;
-  margin-top: 58px;
+  padding: 5px;
 }
 
 .product-image-left {
   direction:ltr;
-  width: 79px;
+  width: 100%;
   height: 80px;
   object-fit: contain;
   cursor: pointer;
@@ -46,12 +42,8 @@ ul {
   padding-inline-start: 20px;
 }
 .product-description-main {
-  position: absolute;
 width: 1002px;
 height: 513px;
-left: 219px;
-top: 160px;
-
 }
 
 .product-description-main-wrapper {
@@ -69,8 +61,8 @@ top: 160px;
   object-fit: contain;
 }
 
-.disabled {
-  cursor:not-allowed !important;
+.product-description-button.disabled {
+  cursor: not-allowed;
   opacity: 0.4;
 }
 
@@ -83,6 +75,7 @@ top: 160px;
   top: 0;
   overflow-y: auto;
   overflow-x: hidden;
+  padding-right: 13px;
 }
 
 .loading{
@@ -131,9 +124,9 @@ top: 160px;
   flex-direction: row;
 }
 
-.color-circle {
+.product-description-sizes .color-circle {
   border-radius: 50%;
-  border: 1px solid gray !important;
+  border: 1px solid gray;
 }
 
 .product-description-size-box {
@@ -176,9 +169,13 @@ top: 160px;
   margin-top: 20px;
 }
 
-.selected-cart {
+.product-description-sizes .selected-cart {
   background: #1D1F22;
   color: white;
+}
+
+.product-description-size-box.selected-cart-color {
+  opacity: 0.3;
 }
 
 .product-description-button {
@@ -186,7 +183,7 @@ top: 160px;
   padding: 16px 32px;
   
   font-family: "Raleway", sans-serif;
-  width: 292px;
+  width: 100%;
   height: 52px;
   margin-top: 40px;
   background: #5ECE7B;
